syntax = "proto3";

package narupa.protocol.topology;

import "narupa/protocol/array.proto";
import "google/protobuf/struct.proto";

message TopologyData {
  map<string, google.protobuf.Value> values = 1;
  map<string, narupa.protocol.ValueArray> arrays = 2;
}
